--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>{% block title %}{% endblock %}</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="stylesheet"
+			href="{{ url_for('static', filename='styles.css') }}"
+		/>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<nav
+			class="navbar navbar-expand-lg navbar-dark fixed-top"
+		>
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/">BartenderIO</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<i class="fas fa-bars"></i>
+				</button>
+				<div
+					class="collapse navbar-collapse"
+					id="navbarSupportedContent"
+				>
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link" href="/random-drink"
+								>Random Drink</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/drinks/favorites">Favorites</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								id="navbarDropdown"
+								role="button"
+								data-bs-toggle="dropdown"
+								aria-expanded="false"
+							>
+								Drink Categories
+							</a>
+							<ul
+								class="dropdown-menu"
+								aria-labelledby="navbarDropdown"
+							>
+								<li>
+									<a class="dropdown-item" href="/drinks/non-alcoholic"
+										>Non-Alcoholic</a
+									>
+								</li>
+								<li>
+									<hr class="dropdown-divider" />
+								</li>
+								<li>
+									<a class="dropdown-item" href="#"
+										>Search By Category</a
+									>
+								</li>
+							</ul>
+						</li>
+					</ul>
+					<ul class="navbar-nav ml-auto">
+						{% if session.get('USER_ID') %}
+						<li class="nav-item">
+							<a class="nav-link" href="/user"
+								>Welcome, {{ session['username'] }}!</a
+							>
+						</li>
+						{% endif %}
+						<li class="nav-item">
+							<form
+								class="w-auto"
+								action="/drinks/search"
+								method="post"
+							>
+								<input
+									type="search"
+									name="search_query"
+									class="form-control"
+									placeholder="Search for a Drink"
+									aria-label="Search"
+								/>
+							</form>
+						</li>
+						<li class="nav-item">
+							{% if session.get('USER_ID') %}
+							<a class="nav-link" href="/logout">Logout</a>
+							{% else %}
+							<a class="nav-link" href="/login">Login</a>
+							{% endif %}
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+		{% with messages = get_flashed_messages() %} {% if messages %}
+		<div class="fixed-alert-container">
+			<div
+				class="alert alert-info alert-dismissible fade show rounded m-3"
+				role="alert"
+			>
+				{% for message in messages %} {{ message }}<br />
+				{% endfor %}
+				<button
+					type="button"
+					class="btn-close"
+					data-bs-dismiss="alert"
+					aria-label="Close"
+				></button>
+			</div>
+		</div>
+		<script>
+			setTimeout(function () {
+				document.querySelector(".alert").remove();
+			}, 5000);
+		</script>
+		{% endif %} {% endwith %} {% block content %} {% endblock %}
+
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
