--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,7 @@
 		/>
 	</head>
 	<body>
-		<nav
-			class="navbar navbar-expand-lg navbar-dark fixed-top"
-		>
+		<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="/">BartenderIO</a>
 				<button
@@ -47,7 +45,14 @@
 							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/drinks/favorites">Favorites</a>
+							<a class="nav-link" href="/drinks/favorites"
+								>Favorites</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/collections"
+								>Collections</a
+							>
 						</li>
 						<li class="nav-item dropdown">
 							<a
@@ -65,7 +70,9 @@
 								aria-labelledby="navbarDropdown"
 							>
 								<li>
-									<a class="dropdown-item" href="/drinks/non-alcoholic"
+									<a
+										class="dropdown-item"
+										href="/drinks/non-alcoholic"
 										>Non-Alcoholic</a
 									>
 								</li>
@@ -137,7 +144,6 @@
 			}, 5000);
 		</script>
 		{% endif %} {% endwith %} {% block content %} {% endblock %}
-
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
