--- a/templates/_favorite_button_script.html
+++ b/templates/_favorite_button_script.html
@@ -28,7 +28,7 @@
 					button.blur();
 				},
 				error: function (xhr, status, error) {
-					console.log(error); // Handle the error case
+					console.log(error); // Handle error cases
 				},
 			});
 		});
