--- a/templates/base.html
+++ b/templates/base.html
@@ -138,12 +138,33 @@
 				></button>
 			</div>
 		</div>
+
+		{% endif %} {% endwith %} {% block content %} {% endblock %}
+
+		<!-- Helper Functions -->
+
+		<!-- Auto removes alert messages after 5 seconds -->
 		<script>
 			setTimeout(function () {
 				document.querySelector(".alert").remove();
 			}, 5000);
 		</script>
-		{% endif %} {% endwith %} {% block content %} {% endblock %}
+
+		<!-- Enables flashing a login error message from any route via JS -->
+		<script>
+			function showLoginError() {
+				window.location.href = "/login-error";
+			}
+		</script>
+
+		<!-- Accepts a drinkId and returns all the collections it belongs to -->
+		<script>
+			function setDrinkId(drinkId) {
+				$("#collectionsModal").data("drinkId", drinkId);
+			}
+		</script>
+
+		<!-- Bootstrap JS -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
