--- a/templates/drink.html
+++ b/templates/drink.html
@@ -19,7 +19,7 @@
 						class="favorite-form"
 					>
 						{% if
-						FavoriteDrink.query.filter_by(api_drink_id=drink['idDrink'],
+						FavoriteDrink.query.filter_by(drink_id=drink['idDrink'],
 						user_id=session.get('USER_ID')).first() %}
 						<button
 							type="submit"
@@ -44,8 +44,13 @@
 				<button
 					type="button"
 					class="btn btn-primary my-1"
-					data-bs-toggle="modal"
-					data-bs-target="#collectionsModal"
+					{% if not session.get('USER_ID') %}
+						onclick="showLoginError()"
+					{% else %}
+						data-bs-toggle="modal"
+						data-bs-target="#collectionsModal"
+						onclick="setDrinkId( `{{ drink['idDrink'] }}` )"
+					{% endif %}
 				>
 					View Collections
 				</button>
