--- a/templates/drinks.html
+++ b/templates/drinks.html
@@ -20,7 +20,7 @@ content%}
 							class="favorite-form"
 						>
 							{% if
-							FavoriteDrink.query.filter_by(api_drink_id=drink['idDrink'],
+							FavoriteDrink.query.filter_by(drink_id=drink['idDrink'],
 							user_id=session.get('USER_ID')).first() %}
 							<button
 								type="submit"
@@ -51,8 +51,13 @@ content%}
 						<button
 							type="button"
 							class="btn btn-secondary mx-2"
-							data-bs-toggle="modal"
-							data-bs-target="#collectionsModal"
+							{% if not session.get('USER_ID') %}
+								onclick="showLoginError()"
+							{% else %}
+								data-bs-toggle="modal"
+								data-bs-target="#collectionsModal"
+								onclick="setDrinkId( `{{ drink['idDrink'] }}` )"
+							{% endif %}
 						>
 							View Collections
 						</button>
