--- a/templates/create_collection.html
+++ b/templates/create_collection.html
@@ -19,7 +19,7 @@
                     Create
                 </button>
     
-                <a href="/drinks" class="btn btn-secondary mt-4 btn-lg">Home</a>
+                <a href="/drinks" class="btn btn-secondary mt-4 btn-lg">Cancel</a>
             </form>
         </div>
     </div>
