--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,10 @@
 		<!-- Auto removes alert messages after 5 seconds -->
 		<script>
 			setTimeout(function () {
-				document.querySelector(".alert").remove();
+				try {
+					document.querySelector(".fixed-alert-container").remove();
+				} catch (e) {
+				}
 			}, 5000);
 		</script>
 
