--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}404 Not Found{% endblock %} {% block
+{% extends 'base.html' %} {% block title %}Error{% endblock %} {% block
 content %}
 <div class="container centered">
 	<div class="row justify-content-center">
