--- a/templates/collections.html
+++ b/templates/collections.html
@@ -18,12 +18,12 @@ content %}
 						<a
 							href="/collections/{{ collection.id }}"
 							class="btn btn-primary"
-							>View Drinks</a
+							>View</a
 						>
 						<a
 							href="/collections/{{ collection.id }}/edit"
 							class="btn btn-secondary mx-2"
-							>Edit Collection</a
+							>Edit</a
 						>
 						<form
 							id="delete-form-{{ collection.id }}"
