updated category drop down menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,19 +69,33 @@
 								class="dropdown-menu"
 								aria-labelledby="navbarDropdown"
 							>
-								<li>
-									<a
-										class="dropdown-item"
-										href="/drinks/non-alcoholic"
-										>Non-Alcoholic</a
-									>
-								</li>
-								<li>
+							<li>
+								<a
+									class="dropdown-item"
+									href="/drinks"
+									>All Drinks</a
+								>
+							</li>
+							<li>
+								<a
+									class="dropdown-item"
+									href="/drinks/non-alcoholic"
+									>Non-Alcoholic</a
+								>
+							</li>
+							<li>
+								<a
+									class="dropdown-item"
+									href="/drinks/alcoholic"
+									>Alcoholic</a
+								>
+							</li>
+							<li>
 									<hr class="dropdown-divider" />
 								</li>
 								<li>
 									<a class="dropdown-item" href="#"
-										>Search By Category</a
+										>Search By Category (Coming Soon)</a
 									>
 								</li>
 							</ul>
