fixed collection checkbox bugs

--- a/templates/_collections_modal.html
+++ b/templates/_collections_modal.html
@@ -55,75 +55,97 @@
 </div>
 
 <script>
+	// Object to store the initial state of the checkboxes in the collections modal
+	let initialCheckboxState = {};
+
+	// Function to run when the modal is shown
+	function onModalShown() {
+		// Get the drink ID from the data attribute
+		const drinkId = $("#collectionsModal").data("drinkId");
+
+		// Perform the AJAX request to get the existing collections
+		$.ajax({
+			url: `/collections/selected`,
+			method: "POST",
+			contentType: "application/json",
+			data: JSON.stringify({ drinkId: drinkId }),
+			success: function (response) {
+				const selectedCollections = response.collections;
+				// Loop through checkboxes and pre-check the ones that correspond to the existing collection-drink relationships
+				$("input[name='collections']").each(function () {
+					const collectionId = $(this).val();
+					if (selectedCollections.includes(parseInt(collectionId))) {
+						$(this).prop("checked", true);
+					}
+					// Record the initial state of the checkboxes to detect changes later
+					initialCheckboxState[collectionId] =
+						$(this).prop("checked");
+				});
+			},
+			error: function (error) {
+				console.log("Error fetching existing collections:", error);
+			},
+		});
+	}
+
 	$(document).ready(function () {
-
-		// Function to run when the modal is shown
-		function onModalShown() {
-
-			// Get the drink ID from the data attribute
-			const drinkId = $("#collectionsModal").data("drinkId");
-			console.log("Drink ID:", drinkId);
-
-			// Perform the AJAX request to get the existing collections
-			$.ajax({
-				url: `/collections/selected`,
-				method: "POST",
-				contentType: "application/json",
-				data: JSON.stringify({ drinkId: drinkId }),
-				success: function (response) {
-					const selectedCollections = response.collections;
-					console.log(response);
-					// Loop through checkboxes and pre-check the ones that correspond to the existing collection-drink relationships
-					$("input[name='collections']").each(function () {
-						const collectionId = $(this).val();
-						if (selectedCollections.includes(parseInt(collectionId))) {
-							$(this).prop("checked", true);
-						}
-					});
-				},
-				error: function (error) {
-					console.log("Error fetching existing collections:", error);
-				},
-			});
-		}
-
 		// Attach the onModalShown function to the shown.bs.modal event
 		$("#collectionsModal").on("shown.bs.modal", onModalShown);
+
+		// Attach the resetInitialCheckboxState function to the hidden.bs.modal event
+		$("#collectionsModal").on("hidden.bs.modal", function () {
+			$("input[name='collections']").each(function () {
+				$(this).prop("checked", false);
+				initialCheckboxState = {};
+			});
+		});
 
 		// Update collections_table upon closing the modal with the update drink button.
 		$("#updateDrinkBtn").click(function (event) {
 			event.preventDefault();
 
-			const selectedCollections = $("input[name='collections']:checked")
-				.map(function () {
-					return $(this).val();
-				})
-				.get();
+			// Calculates which boxes have been changed from their inital state
+			const changedCollections = [];
+
+			$("input[name='collections']").each(function () {
+				const collectionId = $(this).val();
+				const currentState = $(this).prop("checked");
+				const initialState = initialCheckboxState[collectionId];
+				if (currentState !== initialState) {
+					changedCollections.push(collectionId);
+				}
+			});
 
 			// Get the drink ID from the data attribute
 			const drinkId = $("#collectionsModal").data("drinkId");
 
-
-			// Perform the AJAX request to add/remove the drink to the collection(s)
-			$.ajax({
-				url: "/collections/update-drinks",
-				method: "POST",
-				contentType: "application/json",
-				data: JSON.stringify({
-					drinkId: drinkId,
-					collections: selectedCollections,
-				}),
-				success: function (response) {
-					// Handle the success response
-					console.log("Collection(s) updated!");
-					$("#collectionsModal").modal("hide");
-					location.reload();
-				},
-				error: function (error) {
-					// Handle the error case
-					console.log("Error adding drink to collections:", error);
-				},
-			});
+			// Perform the AJAX request to add/remove the drink to the collection(s) that were changed
+			if (changedCollections.length > 0) {
+				$.ajax({
+					url: "/collections/update-drinks",
+					method: "POST",
+					contentType: "application/json",
+					data: JSON.stringify({
+						drinkId: drinkId,
+						collections: changedCollections,
+					}),
+					success: function (response) {
+						// Handle the success response
+						$("#collectionsModal").modal("hide");
+						location.reload();
+					},
+					error: function (error) {
+						// Handle the error case
+						console.log(
+							"Error adding drink to collections:",
+							error
+						);
+					},
+				});
+			} else {
+				// If no collections were changed, just close the modal
+				$("#collectionsModal").modal("hide");
+			}
 		});
 	});
 </script>
